Fix comment title spacing

--- a/styles/_comments.scss
+++ b/styles/_comments.scss
@@ -5,7 +5,7 @@
   padding: 20px 0;
 
   &-heading {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     margin-top: 0;
     font-size: 24px;
     font-weight: $font-weight-semibold;
